--- a/templates/addjobs.html
+++ b/templates/addjobs.html
@@ -45,7 +45,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        Do you want to mark the job as completed?
+                        Do you want to mark the job as completed? Once a job is marked complete it cannot be modified.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -56,7 +56,6 @@
         </div>
     </tbody>
 </table>
-
 
 <!--show the service and part detail-->
 <div class="container">
