--- a/templates/unpaid_bills.html
+++ b/templates/unpaid_bills.html
@@ -24,10 +24,8 @@
     <!-- code to display list of unpaidbills-->
     <div class="container">
     <form class="navbar-form navbar-right" style="margin-top: 40px;" method="post" action="{{ url_for('unpaidbills')}}" id="myForm">
-        <input class="form-control mr-sm-10" type="search" placeholder="customer name/ID" aria-label="Search"
-            name="search">
-        <button class="btn btn-outline-success my-2 my-sm-10" type="btn-primary">Search</button>
-
+        <input class="form-control mr-sm-10" type="search" placeholder="customer name/ID" aria-label="Search" name="search">
+        <button class="btn btn-outline-success my-2 my-sm-10" type="btn-primary" name="search" value="search">Search</button>
         {% if unpaidbills == [] %}
         <table class="table" table-bordered>
             <thead>
@@ -37,6 +35,7 @@
                     <th>First Name</th>
                     <th>Family Name</th>
                     <th>Date</th>
+                    <th>Toal Cost</th>
                     <th>Mark as paid</th>
                 </tr>
             </thead>
@@ -45,7 +44,7 @@
 
         {% else %}
 
-        <table class="table" table-bordered>
+        <table class="table table-hover table-sm" table-bordered>
             <thead>
                 <tr>
                     <th>Job ID</th>
@@ -53,6 +52,7 @@
                     <th>First Name</th>
                     <th>Family Name</th>
                     <th>Date</th>
+                    <th>Toal Cost</th>
                     <th>Mark as paid</th>
                 </tr>
             </thead>
@@ -62,34 +62,33 @@
                     {% for field in bills %}
                     <td>{{field}}</td>
                     {% endfor %}
-                    <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >Paid</button></td>
+                    <input type="hidden" name="markpaid" value="{{bills.0}}">
+                    <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Paid</button></td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
         {% endif %}
-
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add Service</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Do you want to add service to the database?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary" form="myForm">Save changes</button>
-                </div>
+    </form>    
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Pay the bill</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Do you want to mark the bill as paid?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary" form="myForm" name="paid" value="paid">Save changes</button>
             </div>
         </div>
     </div>
-    </form>
     </div>
-</div>
+    
+    </div>
 </div>
 {% endblock %}
